# ict

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bitstring.h  bitstring.md  cloned_ptr.h  command.h  exception.h  expr.h  ict.h  meson.build  multivector.h  multivector.md  netvar.h  osstream.h  string64.h  unit.h
.github/workflows/: ccpp.yml
docs/: bitstring.md  bitstring.wd  multivector.md  multivector.wd  temp.md
ict/: bitstring.h  bitstring.md  command.h  exception.h  expr.h  ict.h  multivector.h  netvar.h  string64.h  unit.h
perf/: CMakeLists.txt  ictperf.cpp  meson.build
tools/: CMakeLists.txt  meson.build  mvcli.cpp
unit/: CMakeLists.txt  meson.build
unit/bitstring/: CMakeLists.txt  bitstringunit.cpp  bitstringunit.h  convert.cpp  meson.build
unit/expression/: CMakeLists.txt  expressionunit.cpp  iexprunit.h  meson.build
unit/ict/: CMakeLists.txt  cloned.cpp  ictunit.cpp  ictunit.h  meson.build
unit/multivector/: CMakeLists.txt  meson.build  multivectorunit.cpp  multivectorunit.h
unit/string64/: CMakeLists.txt  Makefile  meson.build  string64unit.cpp  string64unit.h
